[package]
name = "ina226-tp"
version = "0.3.0"
edition = "2021"
author = ["Thiago Palmieri <palmieri@adastra.aleeas.com>"]
keywords = ["analog", "driver", "i2c", "embedded-hal-driver", "async"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
description = "Rust Driver for device INA226 High-Side or Low-Side Measurement, Bi-Direcional Current and Power Monitor"
readme = "README.md"
repository = "https://github.com/Thiapalm/ina226"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "1.0"
byteorder = { version = "1.4.3", default-features = false }
embedded-hal-async = { version = "1.0.0", optional = true }
maybe-async-cfg = "0.2.3"


[dev-dependencies]
pretty_assertions = "1"
embedded-hal-mock = "0.11.1"
float-cmp = "0.9.0"

[features]
async = ["dep:embedded-hal-async"]
